--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width,initial-scale=1.0,maximum-scale=1.0">
 <title>2025年中四国学生リーグ — チーム & 選手</title>
-<link rel="stylesheet" href="statics/css/style_w.css" />
+<link rel="stylesheet" href="statics/css/style_o.css" />
 </head>
 <body>
 <header>
   <div>
     <img src="statics/img/dragonflies.png" alt="logo" height="60" style="vertical-align:middle; margin-right:12px">
-    <a class="btn small" href="https://cscaa.jp" target="_blank" rel="noopener noreferrer">連盟HP</a>
+    <a class="btn small" href="https://hiroshimadragonflies.com/" target="_blank" rel="noopener noreferrer">公式</a>
   </div>
   <div style="margin-left:auto" class="kbd">⌘/Ctrl + K で検索フォーカス</div>
 </header>
