--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
 <header>
   <div>
     <img src="statics/img/dragonflies.png" alt="logo" height="60" style="vertical-align:middle; margin-right:12px">
-    <a class="btn small" href="https://hiroshimadragonflies.com/" target="_blank" rel="noopener noreferrer">公式</a>
+    <a class="btn small" href="https://hiroshimadragonflies.com/" target="_blank" rel="noopener noreferrer">公式HP</a>
   </div>
-  <div style="margin-left:auto" class="kbd">⌘/Ctrl + K で検索フォーカス</div>
+  <!-- <div style="margin-left:auto" class="kbd">⌘/Ctrl + K で検索フォーカス</div> -->
 </header>
 
 <div class="search-bar" role="search" aria-label="検索バー">
