--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <div class="search-bar" role="search" aria-label="検索バー">
   <div class="tabs" role="tablist" aria-label="検索対象切替">
     <button class="tab" role="tab" aria-selected="true" data-target="players">選手</button>
-    <button class="tab" role="tab" aria-selected="false" data-target="teams">チーム</button>
+    <!-- <button class="tab" role="tab" aria-selected="false" data-target="teams">チーム</button> -->
   </div>
 </div>
 <div class="search-bar" role="search" aria-label="検索バー">
