--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
       <div class="muted" id="summary">選手を表示中 — 全 <span id="count">0</span> 件</div>
       <div class="muted" id="activeFilters">フィルタ：なし</div>
     </div>
-      <button id="toggleView" class="btn small" style="margin-left:12px">グリッド切替</button>
+      <!-- <button id="toggleView" class="btn small" style="margin-left:12px">グリッド切替</button> -->
        <div id="resultsArea"></div>
 
     <footer>
