--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width,initial-scale=1.0,maximum-scale=1.0">
 <title>2025年中四国学生リーグ — チーム & 選手</title>
-<link rel="stylesheet" href="statics/css/style_o.css" />
+<link rel="stylesheet" href="statics/css/style.css" />
 </head>
 <body>
 <header>
