--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width,initial-scale=1.0,maximum-scale=1.0">
-<title>2025年中四国学生リーグ — チーム & 選手</title>
+<title>広島ドラゴンフライズ Player of the Match 投票</title>
 <link rel="stylesheet" href="statics/css/style.css" />
 </head>
 <body>
