--- a/index.html
+++ b/index.html
@@ -24,14 +24,14 @@
 <div class="search-bar" role="search" aria-label="検索バー">
   <div class="filters" aria-hidden="false">
     <label style="margin:0">
-      <select id="division" class="input" aria-label="ブロック">
-        <option value="" selected>ブロック指定</option>
-        <option value="A">A</option>
+      <select id="division" class="input" aria-label="ブロック" disabled>
+        <option value="" selected>地区指定(整備中)</option>
+        <option value="a">A</option>
         <option value="B">B</option>
       </select>
     </label>
     <label style="margin:0">
-        <input id="q" class="input" type="search" placeholder="選手名・チーム名で検索" aria-label="フリーワード検索">
+        <input id="q" class="input" type="search" placeholder="選手名で検索" aria-label="フリーワード検索">
     </label>
     <label style="margin:0">
       <input id="numMax" type="tel" min="0" placeholder="番号で検索" class="input small" style="width:50px" aria-label="番号上限">
