--- a/index.html
+++ b/index.html
@@ -7,8 +7,15 @@
 <link rel="stylesheet" href="statics/css/style.css" />
 </head>
 <body>
+<!-- ローディング画面 -->
+<div id="loading">
+  <div class="spinner"></div>
+  <p>読み込み中...</p>
+</div>
+
+<!-- 本体コンテンツ -->
 <header>
-  <div>
+  <div id="content">
     <img src="statics/img/dragonflies.png" alt="logo" height="60" style="vertical-align:middle; margin-right:12px">
     <a class="btn small" href="https://hiroshimadragonflies.com/" target="_blank" rel="noopener noreferrer">公式HP</a>
   </div>
