--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <header>
   <div id="content">
     <img src="statics/img/dragonflies.png" alt="logo" height="60" style="vertical-align:middle; margin-right:12px">
-    <a class="btn small" href="https://hiroshimadragonflies.com/" target="_blank" rel="noopener noreferrer">公式HP</a>
+    <a class="btn small" href="./ranking.html">投票結果</a>
   </div>
   <!-- <div style="margin-left:auto" class="kbd">⌘/Ctrl + K で検索フォーカス</div> -->
 </header>
