--- a/ranking.html
+++ b/ranking.html
@@ -12,6 +12,7 @@
 <header>
     <div class="header-content">
         <div></div> <!-- left spacer -->
+        <img src="statics/img/dragonflies.png" alt="logo" height="60" style="vertical-align:middle; margin-right:12px">
         <h1>投票結果ランキング</h1>
         <!-- <a class="btn small" href="index.html" style="background-color: #FF7043;">投票ページへ</a> -->
     </div>
