--- a/index.html
+++ b/index.html
@@ -31,26 +31,35 @@
 <div class="search-bar" role="search" aria-label="検索バー">
   <div class="filters" aria-hidden="false">
     <label style="margin:0">
-      <select id="division" class="input" aria-label="ブロック" disabled>
+      <!-- <select id="division" class="input" aria-label="ブロック" hidden>
         <option value="" selected>地区指定(整備中)</option>
         <option value="a">A</option>
         <option value="B">B</option>
       </select>
-    </label>
-    <label style="margin:0">
+    </label> -->
+    <label style="margin:1">
         <input id="q" class="input" type="search" placeholder="選手名で検索" aria-label="フリーワード検索">
     </label>
     <label style="margin:0">
       <input id="numMax" type="tel" min="0" placeholder="番号で検索" class="input small" style="width:50px" aria-label="番号上限">
     </label>
-    <label style="margin:0">
+          <select id="division" class="input" aria-label="ブロック" hidden>
+        <option value="" selected>地区指定(整備中)</option>
+        <option value="a">A</option>
+        <option value="B">B</option>
+      </select>
+    <!-- <label style="margin:0">
       <button id="resetFilters" class="btn small" title="フィルタリセット">リセット</button>
-    </label>
+    </label> -->
   </div>
 </div>
 
 <div class="main">
   <section class="results" aria-live="polite">
+        <label style="margin:0">
+      <button id="resetFilters" class="btn small" title="フィルタリセット">リセット</button>
+    </label>
+    <br>
     <div class="list-controls">
       <div class="muted" id="summary">選手を表示中 — 全 <span id="count">0</span> 件</div>
       <div class="muted" id="activeFilters">フィルタ：なし</div>
