--- a/ranking.html
+++ b/ranking.html
@@ -24,7 +24,7 @@
 </div>
 
 <main>
-    <a class="btn small" href="index.html" >投票ページへ</a>
+    <a class="btn" href="index.html" >投票ページへ</a>
     <!-- <div id="loading" class="spinner"></div> -->
 
     <div id="rankingContainer" class="ranking-list hidden"></div>
