--- a/index.html
+++ b/index.html
@@ -62,15 +62,20 @@
     <br>
     <div class="list-controls">
       <div class="muted" id="summary">選手を表示中 — 全 <span id="count">0</span> 件</div>
-      <div class="muted" id="activeFilters">フィルタ：なし</div>
+      <div class="muted" id="activeFilters" hidden>フィルタ：なし</div>
     </div>
       <!-- <button id="toggleView" class="btn small" style="margin-left:12px">グリッド切替</button> -->
        <div id="resultsArea"></div>
 
     <footer>
-      <div class="muted">ブロック、選手名、チーム名、番号(半角数字)を入力すると検索できます。</div>
+      <div class="muted">選手名または番号(半角数字)を入力すると検索できます。</div>
     </footer>
   </section>
+</div>
+<div class="content">
+  <footer>
+    <div class="muted" style="font-size:0.8em; margin-top:24px;">重要な注）本サイトはチーム公式と一切関係ありません。</div>
+  </footer>
 </div>
 
 <div id="modalRoot" aria-hidden="true"></div>
