--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 <meta name="viewport" content="width=device-width,initial-scale=1.0,maximum-scale=1.0">
 <title>広島ドラゴンフライズ Player of the Match 投票</title>
 <link rel="stylesheet" href="statics/css/style.css" />
+<!-- <link rel="stylesheet" href="statics/css/test.css" /> -->
 </head>
 <body>
 <!-- ローディング画面 -->
