--- a/ranking.html
+++ b/ranking.html
@@ -13,7 +13,8 @@
     <div class="header-content">
         <div></div> <!-- left spacer -->
         <img src="statics/img/dragonflies.png" alt="logo" height="60" style="vertical-align:middle; margin-right:12px">
-        <h1>投票結果ランキング</h1>
+        <h1>Voting Leaderboard　</h1>
+        <a class="btn small" href="./index.html">VOTE</a>
         <!-- <a class="btn small" href="index.html" style="background-color: #FF7043;">投票ページへ</a> -->
     </div>
 </header>
@@ -24,7 +25,7 @@
 </div>
 
 <main>
-    <a class="btn" href="index.html" >投票ページへ</a>
+    <!-- <a class="btn" href="index.html" >投票ページへ</a> -->
     <!-- <div id="loading" class="spinner"></div> -->
 
     <div id="rankingContainer" class="ranking-list hidden"></div>
