--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
 <header>
   <!-- <div id="content"> -->
   <div class="header-content">
-    <img src="statics/img/dragonflies.png" alt="logo" height="60" style="vertical-align:middle; margin-right:12px">
-    <h1>Vote for Player　</h1>
+    <img src="statics/img/vote_for_player.png" alt="logo" height="60" style="vertical-align:middle; margin-right:12px">
+    <!-- <h1>Vote for Player　</h1> -->
     <a class="btn small" href="./ranking.html">RESULTS</a>
   </div>
   </header>
