--- a/index.html
+++ b/index.html
@@ -24,17 +24,20 @@
 <div class="main-content">
   <section class="search-section">
     </label>
-          <select id="division" class="input" aria-label="ブロック" hidden>
+      <select id="division" class="input" aria-label="ブロック" hidden>
         <option value="" selected>地区指定(整備中)</option>
         <option value="a">A</option>
         <option value="B">B</option>
       </select>
+      <label style="margin:0">
+        <button id="resetFilters" class="btn small" title="フィルタリセット">検索条件をリセットする</button>
+        <br><br>
     <div class="search-input-container">
       <input id="q" class="input" type="search" placeholder="選手名で検索" aria-label="フリーワード検索">
       <input id="numMax" type="tel" min="0" placeholder="番号で検索" class="input" aria-label="番号で検索">
     </div>
-        <label style="margin:1">
-      <button id="resetFilters" class="btn small" title="フィルタリセット">検索条件をリセットする</button>
+    <!-- <label style="margin:1">
+      <button id="resetFilters" class="btn small" title="フィルタリセット">検索条件をリセットする</button> -->
 
   </section>
   <section class="results" aria-live="polite">
