--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <option value="B">B</option>
       </select>
       <label style="margin:0">
-        <button id="resetFilters" class="btn small" title="フィルタリセット">検索条件をリセットする</button>
+        <button id="resetFilters" class="btn small" title="フィルタリセット">検索条件クリア</button>
         <br><br>
     <div class="search-input-container">
       <input id="q" class="input" type="search" placeholder="選手名で検索" aria-label="フリーワード検索">
