--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 <div id="modalRoot" aria-hidden="true"></div>
 
 <script type="module" src="statics/js/script.js"></script>
-<script>
+<!-- <script>
   window.onload = function() {
     if (!sessionStorage.getItem("reloaded")) {
       sessionStorage.setItem("reloaded", "true");
@@ -67,7 +67,7 @@
       sessionStorage.removeItem("reloaded");
     }
   };
-</script>
+</script> -->
 
 </body>
 </html>
