--- a/ranking.html
+++ b/ranking.html
@@ -27,6 +27,7 @@
 <main>
     <!-- <a class="btn" href="index.html" >投票ページへ</a> -->
     <!-- <div id="loading" class="spinner"></div> -->
+    <p class='vote-count'>投票数が同じ場合には、最新投票順に表示しています</p>
 
     <div id="rankingContainer" class="ranking-list hidden"></div>
 </main>
