--- a/ranking.html
+++ b/ranking.html
@@ -6,6 +6,8 @@
     <title>投票結果ランキング</title>
     <link rel="stylesheet" href="statics/css/ranking.css" />
     <link rel="stylesheet" href="statics/css/style.css" />
+    <link rel="icon" href="statics/img/favicon.png" type="image/x-icon">
+    <link rel="shortcut icon" href="statics/img/dragonflies.png" type="image/x-icon">
 </head>
 <body>
 
