--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
 <meta name="viewport" content="width=device-width,initial-scale=1.0,maximum-scale=1.0">
 <title>広島ドラゴンフライズ Player of the Match 投票</title>
 <link rel="stylesheet" href="statics/css/style.css" />
+<link rel="icon" href="statics/img/favicon.png" type="image/x-icon">
+<link rel="shortcut icon" href="statics/img/dragonflies.png" type="image/x-icon">
 </head>
 <body>
 <div id="loading">
