--- a/ranking.html
+++ b/ranking.html
@@ -31,8 +31,8 @@
     <!-- <div id="loading" class="spinner"></div> -->
     <p class='vote-count'>投票数が同じ場合には、最新投票順に表示しています</p>
     <div class="team-filter" style="text-align: center; ">
-        <button id="showAll" class="btn active" style="margin: 0 5px;">全体</button>
         <button id="showHome" class="btn" style="margin: 0 5px;">H O M E</button>
+        <button id="showAll" class="btn active" style="margin: 0 5px;">ＡＬＬ</button>
         <button id="showVisitor" class="btn" style="margin: 0 5px;">VISITOR</button>
     </div>
     <div id="rankingContainer" class="ranking-list hidden"></div>
