--- a/ranking.html
+++ b/ranking.html
@@ -29,7 +29,8 @@
 <main>
     <!-- <a class="btn" href="index.html" >投票ページへ</a> -->
     <!-- <div id="loading" class="spinner"></div> -->
-    <p class='vote-count'>投票数が同じ場合には、最新投票順に表示しています</p>
+    <!-- <p class='vote-count'>投票数が同じ場合には、最新投票順に表示しています</p> -->
+    <br>
     <div class="team-filter" style="text-align: center; ">
         <button id="showHome" class="btn" style="margin: 0 5px;">H O M E</button>
         <button id="showAll" class="btn active" style="margin: 0 5px;">ＡＬＬ</button>
