--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
   </header>
 
 <div class="main-content">
+  <div id="resultsArea"></div>
   <section class="search-section">
     </label>
       <select id="division" class="input" aria-label="ブロック" hidden>
@@ -47,7 +48,7 @@
       <div class="muted" id="summary">選手を表示中 — 全 <span id="count">0</span> 件</div>
       <div class="muted" id="activeFilters" hidden>フィルタ：なし</div>
     </div>
-    <div id="resultsArea"></div>
+    <!-- <div id="resultsArea"></div> -->
   </section>
 </div>
 
