--- a/index.html
+++ b/index.html
@@ -24,6 +24,10 @@
   </header>
 
 <div class="main-content">
+  <!-- <div id="matchInfoArea">
+    <p id="matchDateDisplay">試合日</p>
+    <p id="arenaDisplay">会場</p>
+  </div> -->
   <div id="resultsArea"></div>
   <section class="search-section">
     </label>
