--- a/ranking.html
+++ b/ranking.html
@@ -33,8 +33,8 @@
     <br>
     <div class="team-filter" style="text-align: center; ">
         <button id="showHome" class="btn" style="margin: 0 5px;">H O M E</button>
-        <button id="showAll" class="btn active" style="margin: 0 5px;">ＡＬＬ</button>
-        <button id="showVisitor" class="btn" style="margin: 0 5px;">VISITOR</button>
+        <button id="showAll" class="btn active" style="margin: 0 5px;">A L L</button>
+        <button id="showVisitor" class="btn" style="margin: 0 5px;">A W A Y</button>
     </div>
     <div id="rankingContainer" class="ranking-list hidden"></div>
 </main>
