--- a/index.html
+++ b/index.html
@@ -24,10 +24,14 @@
   </header>
 
 <div class="main-content">
-  <!-- <div id="matchInfoArea">
-    <p id="matchDateDisplay">試合日</p>
-    <p id="arenaDisplay">会場</p>
-  </div> -->
+  <div id="matchInfoArea">
+    <p id="matchDisplay">対戦</p>
+  </div>
+  <div id="matchInfoArea">
+    <p id="matchDateDisplay"></p>
+    <p id="arenaDisplay"></p>
+  </div>
+  <br>
   <div id="resultsArea"></div>
   <section class="search-section">
     </label>
