--- a/index.html
+++ b/index.html
@@ -25,11 +25,11 @@
 
 <div class="main-content">
   <div id="matchInfoArea">
-    <p id="matchDisplay">対戦</p>
+    <p id="matchDisplay"></p>
   </div>
   <div id="matchInfoArea">
     <p id="matchDateDisplay"></p>
-    <p id="arenaDisplay"></p>
+    <!-- <p id="arenaDisplay"></p> -->
   </div>
   <br>
   <div id="resultsArea"></div>
