--- a/ranking.html
+++ b/ranking.html
@@ -31,6 +31,11 @@
     <!-- <div id="loading" class="spinner"></div> -->
     <!-- <p class='vote-count'>投票数が同じ場合には、最新投票順に表示しています</p> -->
     <br>
+    <div class="main-content">
+    <div id="matchInfoArea">
+        <p id="matchDisplay"></p>
+    </div>
+    <br>
     <div class="team-filter" style="text-align: center; ">
         <button id="showHome" class="btn" style="margin: 0 5px;">H O M E</button>
         <button id="showAll" class="btn active" style="margin: 0 5px;">A L L</button>
