--- a/ranking.html
+++ b/ranking.html
@@ -43,7 +43,7 @@
     </div>
     <div id="rankingContainer" class="ranking-list hidden"></div>
 </main>
-
+<div id="modalRoot" aria-hidden="true"></div>
 <script src="statics/js/ranking.js"></script>
 
 </body>
