--- a/index.html
+++ b/index.html
@@ -57,28 +57,15 @@
       <div class="muted" id="activeFilters" hidden>フィルタ：なし</div>
     </div>
     <!-- <div id="resultsArea"></div> -->
-  </section>
-</div>
-
-<div class="content">
-  <footer>
-    <div class="muted" style="font-size:0.8em; margin-top:24px;">重要な注）本サイトはチーム公式と一切関係ありません。</div>
-  </footer>
+    <footer class="content">
+      <div class="muted" style="font-size:0.8em; margin-top:24px;">重要な注）本サイトはチーム公式と一切関係ありません。</div>
+      </footer>
+    </section>
 </div>
 
 <div id="modalRoot" aria-hidden="true"></div>
 
 <script type="module" src="statics/js/script.js"></script>
-<!-- <script>
-  window.onload = function() {
-    if (!sessionStorage.getItem("reloaded")) {
-      sessionStorage.setItem("reloaded", "true");
-      window.location.reload();
-    } else {
-      sessionStorage.removeItem("reloaded");
-    }
-  };
-</script> -->
 
 </body>
 </html>
