--- a/ranking.html
+++ b/ranking.html
@@ -42,6 +42,9 @@
         <button id="showVisitor" class="btn" style="margin: 0 5px;">A W A Y</button>
     </div>
     <div id="rankingContainer" class="ranking-list hidden"></div>
+    <footer class="content">
+      <div class="muted" style="font-size:0.8em; margin-top:24px;">重要な注）本サイトはチーム公式と一切関係ありません。</div>
+    </footer>
 </main>
 <div id="modalRoot" aria-hidden="true"></div>
 <script src="statics/js/ranking.js"></script>
