--- a/ranking.html
+++ b/ranking.html
@@ -23,7 +23,7 @@
 <!-- ローディング画面 -->
 <div id="loading">
   <div class="spinner"></div>
-  <p>処理中です...</p>
+  <p>データ集計をしています...</p>
 </div>
 
 <main>
