--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width,initial-scale=1.0,maximum-scale=1.0">
-<title>広島ドラゴンフライズ Player of the Match 投票</title>
+<title>Player of the Match 投票</title>
 <link rel="stylesheet" href="statics/css/style.css" />
 <link rel="icon" href="statics/img/favicon.png" type="image/x-icon">
 <link rel="shortcut icon" href="statics/img/dragonflies.png" type="image/x-icon">
@@ -58,7 +58,7 @@
     </div>
     <!-- <div id="resultsArea"></div> -->
     <footer class="content">
-      <div class="muted" style="font-size:0.8em; margin-top:24px;">重要な注）本サイトはチーム公式と一切関係ありません。</div>
+      <div class="muted" style="font-size:0.8em; margin-top:24px;">重要な注）本サイトはあらゆるクラブ公式と一切関係ありません。</div>
       </footer>
     </section>
 </div>
