--- a/ranking.html
+++ b/ranking.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width,initial-scale=1.0,maximum-scale=1.0">
-    <title>投票結果ランキング</title>
+    <title>MoP 投票結果ランキング</title>
     <link rel="stylesheet" href="statics/css/ranking.css" />
     <link rel="stylesheet" href="statics/css/style.css" />
     <link rel="icon" href="statics/img/favicon.png" type="image/x-icon">
@@ -43,7 +43,7 @@
     </div>
     <div id="rankingContainer" class="ranking-list hidden"></div>
     <footer class="content">
-      <div class="muted" style="font-size:0.8em; margin-top:24px;">重要な注）本サイトはチーム公式と一切関係ありません。</div>
+      <div class="muted" style="font-size:0.8em; margin-top:24px;">重要な注）本サイトはあらゆるクラブ公式と一切関係ありません。</div>
     </footer>
 </main>
 <div id="modalRoot" aria-hidden="true"></div>
