--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
     </div>
     <!-- <div id="resultsArea"></div> -->
     <footer class="content">
-      <div class="muted" style="font-size:0.8em; margin-top:24px;">重要な注）本サイトはあらゆるクラブ公式と一切関係ありません。</div>
+      <div class="muted" style="font-size:0.8em; margin-top:24px;">本サイトはあらゆるクラブ公式と一切関係ありません。</div>
       </footer>
     </section>
 </div>
