--- a/ranking.html
+++ b/ranking.html
@@ -43,7 +43,7 @@
     </div>
     <div id="rankingContainer" class="ranking-list hidden"></div>
     <footer class="content">
-      <div class="muted" style="font-size:0.8em; margin-top:24px;">重要な注）本サイトはあらゆるクラブ公式と一切関係ありません。</div>
+      <div class="muted" style="font-size:0.8em; margin-top:24px;">本サイトはあらゆるクラブ公式と一切関係ありません。</div>
     </footer>
 </main>
 <div id="modalRoot" aria-hidden="true"></div>
