--- a/ranking.html
+++ b/ranking.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width,initial-scale=1.0,maximum-scale=1.0">
-    <title>MoP 投票結果ランキング</title>
+    <title>PoM 投票結果ランキング</title>
     <link rel="stylesheet" href="statics/css/ranking.css" />
     <link rel="stylesheet" href="statics/css/style.css" />
     <link rel="icon" href="statics/img/favicon.png" type="image/x-icon">
