--- a/ranking.html
+++ b/ranking.html
@@ -14,7 +14,7 @@
 <header>
     <div class="header-content">
         <div></div> <!-- left spacer -->
-        <img src="statics\img\voging_leaderborad.png" alt="logo" height="60" style="vertical-align:middle; margin-right:12px">
+        <img src="statics/img/voting_leaderborad.png" alt="logo" height="60" style="vertical-align:middle; margin-right:12px">
         <!-- <h1>Voting Leaderboard　</h1> -->
         <a class="btn small" href="./index.html">VOTE</a>
         <!-- <a class="btn small" href="index.html" style="background-color: #FF7043;">投票ページへ</a> -->
