--- a/ranking.html
+++ b/ranking.html
@@ -35,6 +35,9 @@
     <div id="matchInfoArea">
         <p id="matchDisplay"></p>
     </div>
+    <div id="matchInfoArea">
+        <p id="arenaDisplay"></p>
+    </div>
     <br>
     <div class="team-filter" style="text-align: center; ">
         <button id="showHome" class="btn" style="margin: 0 5px;">H O M E</button>
