--- a/ranking.html
+++ b/ranking.html
@@ -4,8 +4,8 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width,initial-scale=1.0,maximum-scale=1.0">
     <title>PoM 投票結果ランキング</title>
-    <link rel="stylesheet" href="statics/css/ranking.css" />
-    <link rel="stylesheet" href="statics/css/style.css" />
+    <!-- <link rel="stylesheet" href="statics/css/ranking.css" /> -->
+    <link rel="stylesheet" href="statics/css/style_new.css" />
     <link rel="icon" href="statics/img/favicon.png" type="image/x-icon">
     <link rel="shortcut icon" href="statics/img/dragonflies.png" type="image/x-icon">
 </head>
@@ -25,11 +25,7 @@
   <div class="spinner"></div>
   <p>データを集計しています...</p>
 </div>
-<main>
-    <!-- <a class="btn" href="index.html" >投票ページへ</a> -->
-    <!-- <div id="loading" class="spinner"></div> -->
-    <!-- <p class='vote-count'>投票数が同じ場合には、最新投票順に表示しています</p> -->
-    <br>
+<!-- <main> -->
     <div class="main-content">
         <div id="matchInfoArea">
             <p id="matchDisplay"></p>
@@ -48,7 +44,7 @@
         <div class="muted" style="font-size:0.8em; margin-top:24px;">本サイトはあらゆるクラブ公式と一切関係ありません。</div>
         </footer>
     </div>
-</main>
+<!-- </main> -->
 <div id="modalRoot" aria-hidden="true"></div>
 <script src="statics/js/ranking.js"></script>
 
